fix: Add padding to projects on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -926,10 +926,6 @@ h6 {
     width: 85%;
   }
 
-  .main__projects {
-    padding: 0;
-  }
-
   .project__img {
     width: 100%;
     border: none;
